--- a/theme.toml
+++ b/theme.toml
@@ -1,19 +1,19 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/spf13/hugoThemes#themetoml for an example
 
-name = "Learn"
+name = "aws-workshop"
 license = "MIT"
-licenselink = "https://github.com/matcornic/hugo-theme-learn/blob/master/LICENSE.md"
-description = "Documentation theme for Hugo, based on Grav Learn theme"
-homepage = "https://github.com/matcornic/hugo-theme-learn/"
-repo = "https://github.com/matcornic/hugo-theme-learn"
-tags = ["documentation", "grav", "learn", "doc", "search"]
+licenselink = "https://github.com/balldarrens/hugo-theme-merged/blob/master/LICENSE.md"
+description = "Merged theme for AWS workshops based on Hugo themes; learn and story"
+homepage = "https://github.com/balldarrens/hugo-theme-merged/"
+repo = "https://github.com/balldarrens/hugo-theme-merged"
+tags = ["documentation", "aws", "workshop", "doc", "search", "slides"]
 features = ["documentation", "menu", "nested sections", "search", "mermaid"]
 min_version = 0.25
 
 [author]
-  name = "Mathieu Cornic"
-  homepage = "https://matcornic.github.io/"
+  name = "Darren Ball"
+  homepage = "https://github.com/balldarrens"
 
 [original]
   name = "Grav Learn"
